# os

./: .env.example  .gitignore  .mcp.json  .npmrc  .prettierignore  .release-it.json  AGENTS.md  BUGGY_CODE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  \  docker-compose.yml  electron.js  entrypoint.sh  eslint.config.mjs  global.d.ts  instrumentation.ts  middleware.ts.bak  next.config.ts  next.config.ts.bak  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  seed.spec.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  server-wrapper.js  tailwind.config.mjs  tsconfig.json  vitest.config.ts
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml
.husky/: pre-commit  pre-push
__tests__/: a11y-test-utils.ts  a11y.test.tsx  access-tab.test.tsx  add-access.test.tsx  instrumentation.test.ts  middleware.test.ts.bak  next.config.test.ts  update-access.test.tsx  vitest.setup.ts
actions/: error.ts
app/: accessibility.css  error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
e2e/: .env.example  (+11 more)
src-tauri/: .env.example  AppxManifest.xml  Cargo.toml  Info.plist  MSIX-BUILD-GUIDE.md  build-msix.ps1  entitlements.mac.plist  setup-test-cert.ps1  tauri.conf.json
src-tauri/capabilities/: default.json  offline-server.json
src-tauri/icons/: icon.icns
src-tauri/offline-shell/: index.html
src-tauri/permissions/: default.toml
src-tauri/src/: foundry_installer.rs  foundry_manager.rs  lib.rs  main.rs  model_manager.rs  oauth.rs  offline_server.rs  ollama_installer.rs  web_cache.rs
(+1140 files in other folders)
